{
  "version": 4,
  "terraform_version": "1.14.0",
  "serial": 255,
  "lineage": "9926660f-062d-3b97-0de7-724d58f9512a",
  "resources": [
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "traffic_generator_vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "force_attach": false,
                "guest_os_features": [
                  "UEFI_COMPATIBLE",
                  "VIRTIO_SCSI_MULTIQUEUE",
                  "GVNIC"
                ],
                "initialize_params": [
                  {
                    "architecture": "X86_64",
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20251111",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/traffic-generator-479416/zones/us-central1-a/disks/traffic-generator-vm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "creation_timestamp": "2025-11-26T17:49:00.216-08:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/traffic-generator-479416/zones/us-central1-a/instances/traffic-generator-vm",
            "instance_id": "6693575047766479075",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-medium",
            "metadata_fingerprint": "rABqLknPejE=",
            "name": "traffic-generator-vm",
            "network_interface": [
              {
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/traffic-generator-479416/global/networks/vpc-traffic-generator",
                "network_ip": "10.10.1.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/traffic-generator-479416/regions/us-central1/subnetworks/traffic-generator-subnet",
                "subnetwork_project": "traffic-generator-479416"
              }
            ],
            "project": "traffic-generator-479416",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/traffic-generator-479416/zones/us-central1-a/instances/traffic-generator-vm",
            "service_account": [
              {
                "email": "sa-traffic-generator@traffic-generator-479416.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "traffic-generator-vm"
            ],
            "tags_fingerprint": "ra_IaIHw6uk=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "us-central1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_rsa"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_firewall.allow_dataflow_ingress_from_vm_vpc",
            "module.network.google_compute_firewall.allow_vm_egress_to_dataflow",
            "module.network.google_compute_network.vpc_dataflow",
            "module.network.google_compute_network.vpc_traffic",
            "module.network.google_compute_network_peering.peering_dataflow_to_traffic",
            "module.network.google_compute_network_peering.peering_traffic_to_dataflow",
            "module.network.google_compute_subnetwork.dataflow_subnet",
            "module.network.google_compute_subnetwork.traffic_subnet",
            "module.project_setup.data.google_project.current",
            "module.project_setup.google_project_iam_member.iam_dataflow_service_agent",
            "module.project_setup.google_project_iam_member.iam_df_bq_editor",
            "module.project_setup.google_project_iam_member.iam_df_gcs_admin",
            "module.project_setup.google_project_iam_member.iam_df_worker_role",
            "module.project_setup.google_project_iam_member.iam_vm_gcs_creator",
            "module.project_setup.google_project_iam_member.iam_vm_network_user",
            "module.project_setup.google_project_service.services",
            "module.project_setup.google_service_account.sa_dataflow_worker",
            "module.project_setup.google_service_account.sa_vm_traffic"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_dataflow_ingress_from_vm_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "8080"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-11-26T17:37:23.669-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/traffic-generator-479416/global/firewalls/allow-dataflow-ingress-from-vm",
            "log_config": [],
            "name": "allow-dataflow-ingress-from-vm",
            "network": "https://www.googleapis.com/compute/v1/projects/traffic-generator-479416/global/networks/vpc-dataflow-processing",
            "params": [],
            "priority": 1000,
            "project": "traffic-generator-479416",
            "self_link": "https://www.googleapis.com/compute/v1/projects/traffic-generator-479416/global/firewalls/allow-dataflow-ingress-from-vm",
            "source_ranges": [
              "10.128.0.0/20"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "dataflow-worker"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_network.vpc_dataflow",
            "module.project_setup.data.google_project.current",
            "module.project_setup.google_project_iam_member.iam_dataflow_service_agent",
            "module.project_setup.google_project_iam_member.iam_df_bq_editor",
            "module.project_setup.google_project_iam_member.iam_df_gcs_admin",
            "module.project_setup.google_project_iam_member.iam_df_worker_role",
            "module.project_setup.google_project_iam_member.iam_vm_gcs_creator",
            "module.project_setup.google_project_iam_member.iam_vm_network_user",
            "module.project_setup.google_project_service.services",
            "module.project_setup.google_service_account.sa_dataflow_worker",
            "module.project_setup.google_service_account.sa_vm_traffic"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_vm_egress_to_dataflow",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "8080"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-11-26T17:37:24.561-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [
              "10.128.0.0/20"
            ],
            "direction": "EGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/traffic-generator-479416/global/firewalls/allow-vm-egress-to-dataflow",
            "log_config": [],
            "name": "allow-vm-egress-to-dataflow",
            "network": "https://www.googleapis.com/compute/v1/projects/traffic-generator-479416/global/networks/vpc-traffic-generator",
            "params": [],
            "priority": 1000,
            "project": "traffic-generator-479416",
            "self_link": "https://www.googleapis.com/compute/v1/projects/traffic-generator-479416/global/firewalls/allow-vm-egress-to-dataflow",
            "source_ranges": [],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "traffic-generator-vm"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_network.vpc_traffic",
            "module.project_setup.data.google_project.current",
            "module.project_setup.google_project_iam_member.iam_dataflow_service_agent",
            "module.project_setup.google_project_iam_member.iam_df_bq_editor",
            "module.project_setup.google_project_iam_member.iam_df_gcs_admin",
            "module.project_setup.google_project_iam_member.iam_df_worker_role",
            "module.project_setup.google_project_iam_member.iam_vm_gcs_creator",
            "module.project_setup.google_project_iam_member.iam_vm_network_user",
            "module.project_setup.google_project_service.services",
            "module.project_setup.google_service_account.sa_dataflow_worker",
            "module.project_setup.google_service_account.sa_vm_traffic"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_dataflow",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "bgp_always_compare_med": false,
            "bgp_best_path_selection_mode": "LEGACY",
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/traffic-generator-479416/global/networks/vpc-dataflow-processing",
            "mtu": 0,
            "name": "vpc-dataflow-processing",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "network_id": "8702187027103880658",
            "numeric_id": "8702187027103880658",
            "project": "traffic-generator-479416",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/traffic-generator-479416/global/networks/vpc-dataflow-processing"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.project_setup.data.google_project.current",
            "module.project_setup.google_project_iam_member.iam_dataflow_service_agent",
            "module.project_setup.google_project_iam_member.iam_df_bq_editor",
            "module.project_setup.google_project_iam_member.iam_df_gcs_admin",
            "module.project_setup.google_project_iam_member.iam_df_worker_role",
            "module.project_setup.google_project_iam_member.iam_vm_gcs_creator",
            "module.project_setup.google_project_iam_member.iam_vm_network_user",
            "module.project_setup.google_project_service.services",
            "module.project_setup.google_service_account.sa_dataflow_worker",
            "module.project_setup.google_service_account.sa_vm_traffic"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "bgp_always_compare_med": false,
            "bgp_best_path_selection_mode": "LEGACY",
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/traffic-generator-479416/global/networks/vpc-traffic-generator",
            "mtu": 0,
            "name": "vpc-traffic-generator",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "network_id": "1672590650463884754",
            "numeric_id": "1672590650463884754",
            "project": "traffic-generator-479416",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/traffic-generator-479416/global/networks/vpc-traffic-generator"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.project_setup.data.google_project.current",
            "module.project_setup.google_project_iam_member.iam_dataflow_service_agent",
            "module.project_setup.google_project_iam_member.iam_df_bq_editor",
            "module.project_setup.google_project_iam_member.iam_df_gcs_admin",
            "module.project_setup.google_project_iam_member.iam_df_worker_role",
            "module.project_setup.google_project_iam_member.iam_vm_gcs_creator",
            "module.project_setup.google_project_iam_member.iam_vm_network_user",
            "module.project_setup.google_project_service.services",
            "module.project_setup.google_service_account.sa_dataflow_worker",
            "module.project_setup.google_service_account.sa_vm_traffic"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "dataflow_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-11-26T17:37:25.635-08:00",
            "gateway_address": "10.10.2.1",
            "id": "projects/traffic-generator-479416/regions/us-central1/subnetworks/dataflow-processing-subnet",
            "ip_cidr_range": "10.10.2.0/24",
            "name": "dataflow-processing-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/traffic-generator-479416/global/networks/vpc-dataflow-processing",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "traffic-generator-479416",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/traffic-generator-479416/regions/us-central1/subnetworks/dataflow-processing-subnet",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 2766607516124714426
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_network.vpc_dataflow",
            "module.project_setup.data.google_project.current",
            "module.project_setup.google_project_iam_member.iam_dataflow_service_agent",
            "module.project_setup.google_project_iam_member.iam_df_bq_editor",
            "module.project_setup.google_project_iam_member.iam_df_gcs_admin",
            "module.project_setup.google_project_iam_member.iam_df_worker_role",
            "module.project_setup.google_project_iam_member.iam_vm_gcs_creator",
            "module.project_setup.google_project_iam_member.iam_vm_network_user",
            "module.project_setup.google_project_service.services",
            "module.project_setup.google_service_account.sa_dataflow_worker",
            "module.project_setup.google_service_account.sa_vm_traffic"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "traffic_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-11-26T17:37:24.473-08:00",
            "gateway_address": "10.10.1.1",
            "id": "projects/traffic-generator-479416/regions/us-central1/subnetworks/traffic-generator-subnet",
            "ip_cidr_range": "10.10.1.0/24",
            "name": "traffic-generator-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/traffic-generator-479416/global/networks/vpc-traffic-generator",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "traffic-generator-479416",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/traffic-generator-479416/regions/us-central1/subnetworks/traffic-generator-subnet",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 6109045254504715707
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_network.vpc_traffic",
            "module.project_setup.data.google_project.current",
            "module.project_setup.google_project_iam_member.iam_dataflow_service_agent",
            "module.project_setup.google_project_iam_member.iam_df_bq_editor",
            "module.project_setup.google_project_iam_member.iam_df_gcs_admin",
            "module.project_setup.google_project_iam_member.iam_df_worker_role",
            "module.project_setup.google_project_iam_member.iam_vm_gcs_creator",
            "module.project_setup.google_project_iam_member.iam_vm_network_user",
            "module.project_setup.google_project_service.services",
            "module.project_setup.google_service_account.sa_dataflow_worker",
            "module.project_setup.google_service_account.sa_vm_traffic"
          ]
        }
      ]
    }
  ]
}